--- a/application/admin/view/Commodity/commodityy.html
+++ b/application/admin/view/Commodity/commodityy.html
@@ -132,7 +132,8 @@
      </div>
     </div>
     <script type="text/javascript">jQuery(".slideTxtBox").slide();</script>
-    <div style="text-align: center;width: 100%;height:60px;line-height:60px;font-size:17px;margin-top: 30px;background: cadetblue;color: ghostwhite";>添 加 井 盖</div>
+    <div style="text-align: center;width: 100%;height:60px;
+    line-height:60px;font-size:17px;margin-top: 30px;background: cadetblue;color: ghostwhite">修 改 井 盖 信 息</div>
 
     <div  style="width:30%;margin-left: 290px;margin-top: 25px;">
         <form class="layui-form" action="" method="post" enctype="multipart/form-data"><!--搜索提交-->
