--- a/application/admin/view/Commodity/lists.html
+++ b/application/admin/view/Commodity/lists.html
@@ -15,6 +15,15 @@
     <link rel="stylesheet" href="{$root}assets/css/amazeui.min.css"/>
     <link rel="stylesheet" href="{$root}assets/css/admin.css">
     <link rel="stylesheet" href="{$root}layui/css/layui.css">
+
+    <link rel="stylesheet" href="{$root}bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="{$root}bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{$root}bootstrap/css/bootstrap-theme.css">
+    <link rel="stylesheet" href="{$root}bootstrap/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="{$root}bootstrap/js/bootstrap.js">
+    <link rel="stylesheet" href="{$root}bootstrap/js/bootstrap.min.js">
+    <link rel="stylesheet" href="{$root}bootstrap/js/npm.js">
+
     <script src="{$root}layui/layui.js" charset="utf-8"></script>
     <script src="{$root}assets/js/jquery.min.js"></script>
     <script src="{$root}assets/js/app.js"></script>
@@ -66,15 +75,14 @@
     <div class="nav-navicon admin-main admin-sidebar">
         <div class="sideMenu am-icon-dashboard" style="color:#aeb2b7; margin: 10px 0 0 0;"> 欢迎系统管理员：{$Think.session.login.nickname}</div>
         <div class="sideMenu">
-            <h3 class="am-icon-flag"><em></em> <a href="#">商品管理</a></h3>
+            <h3 style="font-size: 15px" class="am-icon-flag"><em></em> <a href="#">商品管理</a></h3>
             <ul>
-                <li><a href="{:url('admin/commodity/lists')}">商品列表</a></li>
-                <li class="func" dataType='html' dataLink='msn.htm' iconImg='images/msn.gif'><a href="{:url('admin/commodity/commodity')}">添加新商品</a></li>
-                <li>用户评论</li>
-                <li>商品回收站</li>
-                <li>库存管理 </li>
+                <li><a href="{:url('commodity/lists')}">井盖列表</a></li>
+                <li class="func" dataType='html' dataLink='msn.htm' iconImg='images/msn.gif'><a href="{:url('commodity/type')}">添加井盖类型</a></li>
+                <li class="func" dataType='html' dataLink='msn.htm' iconImg='images/msn.gif'><a href="{:url('commodity/commodity')}">添加井盖信息</a></li>
+                <li class="func" dataType='html' dataLink='msn.htm' iconImg='images/msn.gif'><a href="{:url('index/index')}">返回首页</a></li>
             </ul>
-            <h3 class="am-icon-cart-plus"><em></em> <a href="#"> 订单管理</a></h3>
+            <h3 style="font-size: 15px" class="am-icon-cart-plus"><em></em> <a href="#"> 订单管理</a></h3>
             <ul>
                 <li>订单列表</li>
                 <li>合并订单</li>
@@ -83,7 +91,7 @@
                 <li>发货单列表</li>
                 <li>换货单列表</li>
             </ul>
-            <h3 class="am-icon-users"><em></em> <a href="#">会员管理</a></h3>
+            <h3 style="font-size: 15px" class="am-icon-users"><em></em> <a href="#">会员管理</a></h3>
             <ul>
                 <li>会员列表 </li>
                 <li>未激活会员</li>
@@ -91,7 +99,7 @@
                 <li>会员推荐图</li>
                 <li>推荐列表</li>
             </ul>
-            <h3 class="am-icon-volume-up"><em></em> <a href="#">信息通知</a></h3>
+            <h3 style="font-size: 15px" class="am-icon-volume-up"><em></em> <a href="#">信息通知</a></h3>
             <ul>
                 <li>站内消息 /留言 </li>
                 <li>短信</li>
@@ -99,7 +107,7 @@
                 <li>微信</li>
                 <li>客服</li>
             </ul>
-            <h3 class="am-icon-gears"><em></em> <a href="#">系统设置</a></h3>
+            <h3 style="font-size: 15px" class="am-icon-gears"><em></em> <a href="#">系统设置</a></h3>
             <ul>
                 <li>数据备份</li>
                 <li>邮件/短信管理</li>
@@ -133,61 +141,44 @@
      </div>
     </div>
     <script type="text/javascript">jQuery(".slideTxtBox").slide();</script>
-    <div style="text-align: center;width: 100%;height:60px;line-height:60px;font-size:17px;margin-top: 30px;background: cadetblue;color: ghostwhite";>商 品 列 表</div>
+    <div style="text-align: center;width: 100%;height:60px;line-height:60px;font-size:17px;margin-top: 30px;background: cadetblue;color: ghostwhite";>井 盖 列 表</div>
 
     <div  style="width: 70%;margin-left: 290px;margin-top: 25px;">
         <table class="layui-table">
             <colgroup>
                 <col width="150">
                 <col width="200">
-                <col>
+                <col width="200">
+                <col width="200">
             </colgroup>
             <thead>
             <tr>
-                <th>昵称</th>
-                <th>加入时间</th>
-                <th>签名</th>
-                <th>编辑</th>
+                <th>id</th>
+                <th>名称</th>
+                <th>类型</th>
+                <th>操作</th>
             </tr>
             </thead>
+            {foreach $list as $val =>$key}
             <tbody>
             <tr>
-                <td>贤心</td>
-                <td>2016-11-29</td>
-                <td>人生就像是一场修行</td>
-                <td><a class="layui-btn layui-btn-primary layui-btn-xs" lay-event="detail">查看</a>
-                    <a class="layui-btn layui-btn-xs" lay-event="edit">编辑</a>
-                    <a class="layui-btn layui-btn-danger layui-btn-xs xx" lay-event="del">删除</a>
+                <td>{$key.id}</td>
+                <td>{$key.name}</td>
+                <td>{$key.type}</td>
+                <td>
+                    <div class="layui-btn layui-btn-primary layui-btn-xs" lay-event="detail"><a style="color: #009688" href="{:url('Commodity/listss',['id'=>$key.type])}">详情</a></div>
+                    <div class="layui-btn layui-btn-xs" lay-event="edit"><a style="color: white" href="{:url('Commodity/typee',['id'=>$key.id])}">编辑</a></div>
+                    <div class="layui-btn layui-btn-danger layui-btn-xs delete" lay-event="del" data-value="{$key.id}">删除</div>
                 </td>
             </tr>
             </tbody>
+            {/foreach}
         </table>
     </div>
-<script>
-    $('.xx').click(function(){
-        layer.confirm('请确认是否执行该操作？',function(){
-            //点击确定
-            layer.closeAll();
-            $.ajax({
-                type:'post',
-                url:'{:url("index/ajax")}',
-                success:function(msg){
-                    alert(msg);
-                },
-                error:function(){
-                    alert('cw');
-                }
-            })
+  <div>
+</div>
 
-        },function(){
-            //取消 -- 还原
-            /*$this.prop('checked',!$this.prop('checked'));
-            var text = $switch.find('em').text() =='NO' ? 'No':'Y';*/
-            //$switch.toggleClass('layui-form-onswitch').find('em').text(text);
-        })
 
-    })
-</script>
 <!--[if lt IE 9]>
 <script src="http://libs.baidu.com/jquery/1.11.1/jquery.min.js"></script>
 <script src="http://cdn.staticfile.org/modernizr/2.8.3/modernizr.js"></script>
@@ -216,6 +207,31 @@
             }
         });
     });
+</script>
+<script>
+    $('.delete').click(function(){
+        var id = $(this).attr('data-value');
+        layer.confirm('确认删除吗？操作不可逆',function(){
+            layer.closeAll();
+           $.ajax({
+                data:{
+                    id:id
+                },
+                type:'post',
+                url:'{:url("admin/Commodity/delete")}',
+                success:function(s){
+                  if(s == 1){
+                      location.reload(true);
+                  }
+                },
+            })
+        },function(){
+            //$this.prop('checked',!$this.prop('checked'));
+            //var text = $switch.find('em').text() =='NO' ? 'No':'Y';
+            //$switch.toggleClass('layui-form-onswitch').find('em').text(text);
+        })
+
+    })
 </script>
 </body>
 </html>
