--- a/application/admin/view/Commodity/typee.html
+++ b/application/admin/view/Commodity/typee.html
@@ -129,60 +129,34 @@
         <div class="daohang">
 
         </div>
-     </div>
     </div>
-    <script type="text/javascript">jQuery(".slideTxtBox").slide();</script>
-    <div style="text-align: center;width: 100%;height:60px;line-height:60px;font-size:17px;margin-top: 30px;background: cadetblue;color: ghostwhite";>添 加 井 盖</div>
+</div>
+<script type="text/javascript">jQuery(".slideTxtBox").slide();</script>
+<div style="text-align: center;width: 100%;height:60px;line-height:60px;font-size:17px;margin-top: 30px;background: cadetblue;color: ghostwhite";>修 改 类 型</div>
 
-    <div  style="width:30%;margin-left: 290px;margin-top: 25px;">
-        <form class="layui-form" action="" method="post" enctype="multipart/form-data"><!--搜索提交-->
-            <div class="layui-form-item">
-                <label class="layui-form-label">名称</label>
-                <div class="layui-input-block">
-                    <input type="text" name="name"    autocomplete="off" class="layui-input" >
-                </div>
+<div style="width:30%;margin-left: 290px;margin-top: 25px;">
+    <form class="layui-form" action="" method="post" enctype="multipart/form-data"><!--搜索提交-->
+        <div class="layui-form-item">
+            <label class="layui-form-label">类型名</label>
+            <div class="layui-input-block">
+                <input type="text" name="name" autocomplete="off" class="layui-input" >
+                {if isset($cw.name)}
+                <div style="text-align: center;color: red;;margin-top: 15px;">{$cw.name}</div>
+                {/if}
             </div>
-            <div class="layui-form-item">
-                <label class="layui-form-label">类型</label>
-                <div class="layui-input-block">
-                    <select name="well_type_id" lay-filter="aihao">
-                        <option value=""></option>
-                        {if $data}
-                        {foreach $data as $val=>$key}
-                        <option value="{$key['type']}">{$key['name']}</option>
-                        {/foreach}
-                        {/if}
-                    </select>
-                </div>
+        </div>
+        <div class="layui-form-item">
+            <label class="layui-form-label">类型值</label>
+            <div class="layui-input-block">
+                <input type="text" name="type" autocomplete="off" class="layui-input" >
+                {if isset($cw.type)}
+                <div style="text-align: center;color: red;;margin-top: 15px;">{$cw.type}</div>
+                {/if}
             </div>
-            {if isset($error)}
-            <div style="text-align: center;color: red;margin-bottom: 15px;">{$error}</div>
-            {/if}
-            <div class="layui-form-item">
-                <label class="layui-form-label">规格</label>
-                <div class="layui-input-block">
-                    <input type="text" name="spec" autocomplete="off" class="layui-input" >
-                </div>
-            </div>
-            <div class="layui-form-item">
-                <label class="layui-form-label">大小</label>
-                <div class="layui-input-block">
-                    <input type="text" name="size" autocomplete="off" class="layui-input" >
-                </div>
-            </div>
-            <div class="layui-form-item">
-                <label class="layui-form-label">井深</label>
-                <div class="layui-input-block">
-                    <input type="text" name="length" autocomplete="off" class="layui-input" >
-                </div>
-            </div>
-             <div style="width: 100px;height: 40px;overflow: hidden;position: relative;background: #009688;border-radius: 5px;margin-left: 110px;margin-top: 15px;">
-                 <div style="position: absolute;top: 10px;left: 15px;color: white"><i class="layui-icon">&#xe67c;</i>上传图片</div>
-                 <input style="width: 100%;height: 100%;opacity: 0" type="file" name="img">
-             </div>
-            <button style="width: 100px;height: 40px;margin-top: 15px;margin-left: 110px;" class="layui-btn" lay-submit="" lay-filter="demo1">立即提交</button>
-        </form>
-    </div>
+        </div>
+            <button style="width: 100px;height: 40px;margin-top: 15px;margin-left: 110px" class="layui-btn" lay-submit="" lay-filter="demo1">立即提交</button>
+    </form>
+</div>
 <script>
 
 </script>
@@ -197,14 +171,6 @@
 <!--[if (gte IE 9)|!(IE)]><!-->
 <script src="{$root}assets/js/amazeui.min.js"></script>
 <!--<![endif]-->
-<script>
-    layui.use(['form', 'layedit', 'laydate'], function(){
-        var form = layui.form
-            ,layer = layui.layer
-            ,layedit = layui.layedit
-            ,laydate = layui.laydate;
-    });
-</script>
 
 
 </body>
