--- a/application/admin/view/Distance/distance.html
+++ b/application/admin/view/Distance/distance.html
@@ -132,20 +132,14 @@
      </div>
     </div>
     <script type="text/javascript">jQuery(".slideTxtBox").slide();</script>
-    <div style="text-align: center;width: 100%;height:60px;line-height:60px;font-size:17px;margin-top: 30px;background: cadetblue;color: ghostwhite";>添 加 井 盖</div>
-
+    <div style="text-align: center;width: 100%;height:60px;
+    line-height:60px;font-size:17px;margin-top: 30px;background: cadetblue;color: ghostwhite">添 加 井 盖 距 离</div>
     <div  style="width:30%;margin-left: 290px;margin-top: 25px;">
         <form class="layui-form" action="" method="post" enctype="multipart/form-data"><!--搜索提交-->
             <div class="layui-form-item">
-                <label class="layui-form-label">名称</label>
-                <div class="layui-input-block">
-                    <input type="text" name="name"    autocomplete="off" class="layui-input" >
-                </div>
-            </div>
-            <div class="layui-form-item">
                 <label class="layui-form-label">类型</label>
                 <div class="layui-input-block">
-                    <select name="well_type_id" lay-filter="aihao">
+                    <select  name="well_id" lay-filter="aihao">
                         <option value=""></option>
                         {if $data}
                         {foreach $data as $val=>$key}
@@ -155,35 +149,33 @@
                     </select>
                 </div>
             </div>
-            {if isset($error)}
-            <div style="text-align: center;color: red;margin-bottom: 15px;">{$error}</div>
+            <div class="layui-form-item">
+                <label class="layui-form-label">类型</label>
+                <div class="layui-input-block">
+                    <select class="" name="names" lay-filter="aihao">
+                        <option value=""></option>
+                        {if $data}
+                        {foreach $data as $val=>$key}
+                        <option value="{$key['type']}">{$key['name']}</option>
+                        {/foreach}
+                        {/if}
+                    </select>
+                </div>
+            </div>
+            {if isset($cw)}
+            <div style="text-align: center;color: red;margin-bottom: 15px;">{$cw}</div>
             {/if}
             <div class="layui-form-item">
-                <label class="layui-form-label">规格</label>
+                <label class="layui-form-label">距离</label>
                 <div class="layui-input-block">
-                    <input type="text" name="spec" autocomplete="off" class="layui-input" >
+                    <input type="text" name="distance" autocomplete="off" class="layui-input" >
                 </div>
             </div>
-            <div class="layui-form-item">
-                <label class="layui-form-label">大小</label>
-                <div class="layui-input-block">
-                    <input type="text" name="size" autocomplete="off" class="layui-input" >
-                </div>
-            </div>
-            <div class="layui-form-item">
-                <label class="layui-form-label">井深</label>
-                <div class="layui-input-block">
-                    <input type="text" name="length" autocomplete="off" class="layui-input" >
-                </div>
-            </div>
-             <div style="width: 100px;height: 40px;overflow: hidden;position: relative;background: #009688;border-radius: 5px;margin-left: 110px;margin-top: 15px;">
-                 <div style="position: absolute;top: 10px;left: 15px;color: white"><i class="layui-icon">&#xe67c;</i>上传图片</div>
-                 <input style="width: 100%;height: 100%;opacity: 0" type="file" name="img">
-             </div>
             <button style="width: 100px;height: 40px;margin-top: 15px;margin-left: 110px;" class="layui-btn" lay-submit="" lay-filter="demo1">立即提交</button>
         </form>
     </div>
 <script>
+
 
 </script>
 <!--[if lt IE 9]>
