--- a/application/admin/view/map/map.html
+++ b/application/admin/view/map/map.html
@@ -1,43 +1,70 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no"/>
     <style type="text/css">
-        html{height:100%}
-        body{height:100%;margin:0px;padding:0px}
-        #container{height:100%}
+        html {
+            height: 100%
+        }
+
+        body {
+            height: 100%;
+            margin: 0px;
+            padding: 0px
+        }
+
+        #container {
+            height: 100%
+        }
     </style>
-    <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=jv44fGVSEclhv0n9gNt9NngGLPXjoUpS"></script>
+    <script type="text/javascript"
+            src="http://api.map.baidu.com/api?v=2.0&ak=jv44fGVSEclhv0n9gNt9NngGLPXjoUpS"></script>
     <title>地图展示</title>
 </head>
 <body>
 <div id="container"></div>
-<div id="r-result">
-    <input type="button" onclick="add_overlay();" value="添加覆盖物" />
-    <input type="button" onclick="remove_overlay();" value="删除覆盖物" />
-</div>
+<!--<div id="r-result">-->
+<!--<input type="button" onclick="add_overlay();" value="添加覆盖物"/>-->
+<!--<input type="button" onclick="remove_overlay();" value="删除覆盖物"/>-->
+<!--</div>-->
 </body>
 </html>
 <script type="text/javascript">
     var map = new BMap.Map("container");// 创建地图实例
-    // var point = new BMap.Point(104.049389,30.637024);  // 创建点坐标
+    // var point = new BMap.Point(104.049389,30.637024);//创建点坐标
     //>>添加控件
-    map.centerAndZoom(new BMap.Point(104.049445,30.636973),17);// 初始化地图，设置中心点坐标和地图级别
+    map.centerAndZoom(new BMap.Point(104.049445, 30.636973), 17);//初始化地图,设置中心点坐标和地图级别
     map.addControl(new BMap.NavigationControl());
     map.addControl(new BMap.ScaleControl());
     map.addControl(new BMap.OverviewMapControl());
     map.addControl(new BMap.MapTypeControl());
-    map.setCurrentCity("成都");
-    map.enableScrollWheelZoom(true);//开启鼠标滚轮缩放
+    // map.setMapType(BMAP_PERSPECTIVE_MAP);
+    //>>开启鼠标轮播缩放
+    map.setCurrentCity("#");
+    map.enableScrollWheelZoom(true);
 
+    //>>地图修改类型为3D
+    // map.setMapType(BMAP_PERSPECTIVE_MAP)
+
+    //>>设置当前城市
+    // map.setCurrentCity("成都市");
+
+    //>>全景
+    //>>覆盖区域图层
+    map.addTileLayer(new BMap.PanoramaCoverageLayer());
+    var stCtrl = new BMap.PanoramaControl();//构造全景控件
+    stCtrl.setOffset(new BMap.Size(27, 32));//定义全景宽高
+    map.addControl(stCtrl);//添加全景控件
     //>>检索
+
     // var local = new BMap.LocalSearch(map, {
     //     renderOptions:{map: map}
     // });
     // local.search("星巴克");
 
-    var myStyleJson=[
+    //>>定义路线颜色
+    var myStyleJson = [
         {
             "featureType": "road",
             "elementType": "geometry.stroke",
@@ -45,6 +72,6 @@
                 "color": "#ff0000"
             }
         }];
-    map.setMapStyle({styleJson: myStyleJson });
+    map.setMapStyle({styleJson: myStyleJson});
 </script>
 
