--- a/application/admin/view/Commodity/commodityy.html
+++ b/application/admin/view/Commodity/commodityy.html
@@ -150,7 +150,7 @@
                         <option value=""></option>
                         {if $data}
                         {foreach $data as $val=>$key}
-                        <option value="{$key['type']}">{$key['name']}</option>
+                        <option value="{$key['type']}">{$key['well_name']}</option>
                         {/foreach}
                         {/if}
                     </select>
