--- a/application/admin/view/Commodity/type.html
+++ b/application/admin/view/Commodity/type.html
@@ -140,8 +140,8 @@
             <label class="layui-form-label">类型名</label>
             <div class="layui-input-block">
                 <input type="text" name="name" autocomplete="off" class="layui-input" >
-                {if isset($cw.name)}
-                <div style="text-align: center;color: red;;margin-top: 15px;">{$cw.name}</div>
+                {if isset($cw.well_name)}
+                <div style="text-align: center;color: red;;margin-top: 15px;">{$cw.well_name}</div>
                 {/if}
             </div>
         </div>
