--- a/application/admin/view/Commodity/sewer.html
+++ b/application/admin/view/Commodity/sewer.html
@@ -85,41 +85,41 @@
             </ul>
             <!--<h3 class="am-icon-cart-plus"><em></em> <a href="#"> 订单管理</a></h3>-->
             <!--<ul>-->
-                <!--<li>订单列表</li>-->
-                <!--<li>合并订单</li>-->
-                <!--<li>订单打印</li>-->
-                <!--<li>添加订单</li>-->
-                <!--<li>发货单列表</li>-->
-                <!--<li>换货单列表</li>-->
+            <!--<li>订单列表</li>-->
+            <!--<li>合并订单</li>-->
+            <!--<li>订单打印</li>-->
+            <!--<li>添加订单</li>-->
+            <!--<li>发货单列表</li>-->
+            <!--<li>换货单列表</li>-->
             <!--</ul>-->
             <!--<h3 class="am-icon-users"><em></em> <a href="#">会员管理</a></h3>-->
             <!--<ul>-->
-                <!--<li>会员列表</li>-->
-                <!--<li>未激活会员</li>-->
-                <!--<li>团队系谱图</li>-->
-                <!--<li>会员推荐图</li>-->
-                <!--<li>推荐列表</li>-->
+            <!--<li>会员列表</li>-->
+            <!--<li>未激活会员</li>-->
+            <!--<li>团队系谱图</li>-->
+            <!--<li>会员推荐图</li>-->
+            <!--<li>推荐列表</li>-->
             <!--</ul>-->
             <!--<h3 class="am-icon-volume-up"><em></em> <a href="#">信息通知</a></h3>-->
             <!--<ul>-->
-                <!--<li>站内消息 /留言</li>-->
-                <!--<li>短信</li>-->
-                <!--<li>邮件</li>-->
-                <!--<li>微信</li>-->
-                <!--<li>客服</li>-->
+            <!--<li>站内消息 /留言</li>-->
+            <!--<li>短信</li>-->
+            <!--<li>邮件</li>-->
+            <!--<li>微信</li>-->
+            <!--<li>客服</li>-->
             <!--</ul>-->
             <!--<h3 class="am-icon-gears"><em></em> <a href="#">系统设置</a></h3>-->
             <!--<ul>-->
-                <!--<li>数据备份</li>-->
-                <!--<li>邮件/短信管理</li>-->
-                <!--<li>上传/下载</li>-->
-                <!--<li>权限</li>-->
-                <!--<li>网站设置</li>-->
-                <!--<li>第三方支付</li>-->
-                <!--<li>提现 /转账 出入账汇率</li>-->
-                <!--<li>平台设置</li>-->
-                <!--<li>声音文件</li>-->
-                <!--<li><a href="{:url('Login/outLogin')}">退出</a></li>-->
+            <!--<li>数据备份</li>-->
+            <!--<li>邮件/短信管理</li>-->
+            <!--<li>上传/下载</li>-->
+            <!--<li>权限</li>-->
+            <!--<li>网站设置</li>-->
+            <!--<li>第三方支付</li>-->
+            <!--<li>提现 /转账 出入账汇率</li>-->
+            <!--<li>平台设置</li>-->
+            <!--<li>声音文件</li>-->
+            <!--<li><a href="{:url('Login/outLogin')}">退出</a></li>-->
             <!--</ul>-->
         </div>
         <!-- sideMenu End -->
@@ -151,18 +151,18 @@
         <div class="layui-form-item">
             <label class="layui-form-label">类型名</label>
             <div class="layui-input-block">
-                <input type="text" name="name" autocomplete="off" class="layui-input" value="{$data.well_name}">
-                {if isset($cw.well_name)}
-                <div style="text-align: center;color: red;;margin-top: 15px;">{$cw.well_name}</div>
+                <input type="text" name="name" autocomplete="off" class="layui-input" value="{$data.name}">
+                {if isset($cw.name)}
+                <div style="text-align: center;color: red;;margin-top: 15px;">{$cw.name}</div>
                 {/if}
             </div>
         </div>
         <div class="layui-form-item">
             <label class="layui-form-label">类型值</label>
             <div class="layui-input-block">
-                <input type="text" name="type" autocomplete="off" class="layui-input" value="{$data.type}">
-                {if isset($cw.type)}
-                <div style="text-align: center;color: red;;margin-top: 15px;">{$cw.type}</div>
+                <input type="text" name="well_type_id" autocomplete="off" class="layui-input" value="{$data.well_type_id}">
+                {if isset($cw.well_type_id)}
+                <div style="text-align: center;color: red;;margin-top: 15px;">{$cw.well_type_id}</div>
                 {/if}
             </div>
         </div>
