--- a/application/admin/view/Distance/sewer.html
+++ b/application/admin/view/Distance/sewer.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>后台管理</title>
+    <title>科翔后台管理系统</title>
     <meta name="description" content="这是一个 index 页面">
     <meta name="keywords" content="index">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta name="renderer" content="webkit">
-    <meta http-equiv="Cache-Control" content="no-siteapp" />
+    <meta http-equiv="Cache-Control" content="no-siteapp"/>
     <link rel="icon" type="image/png" href="{$root}assets/i/favicon.png">
     <link rel="apple-touch-icon-precomposed" href="{$root}assets/i/app-icon72x72@2x.png">
-    <meta name="apple-mobile-web-app-title" content="Amaze UI" />
+    <meta name="apple-mobile-web-app-title" content="Amaze UI"/>
     <link rel="stylesheet" href="{$root}assets/css/amazeui.min.css"/>
     <link rel="stylesheet" href="{$root}assets/css/admin.css">
     <link rel="stylesheet" href="{$root}layui/css/layui.css">
@@ -28,7 +28,8 @@
     <script src="{$root}assets/js/jquery.min.js"></script>
     <script src="{$root}assets/js/app.js"></script>
 </head>
-<!--[if lte IE 9]><p class="browsehappy">升级你的浏览器吧！ <a href="http://se.360.cn/" target="_blank">升级浏览器</a>以获得更好的体验！</p><![endif]-->
+<!--[if lte IE 9]><p class="browsehappy">升级你的浏览器吧！ <a href="http://se.360.cn/" target="_blank">升级浏览器</a>以获得更好的体验！</p>
+<![endif]-->
 </head>
 <body>
 <header class="am-topbar admin-header">
@@ -36,7 +37,8 @@
     <div class="am-collapse am-topbar-collapse" id="topbar-collapse">
         <ul class="am-nav am-nav-pills am-topbar-nav admin-header-list">
             <li class="am-dropdown tognzhi" data-am-dropdown>
-                <button class="am-btn am-btn-primary am-dropdown-toggle am-btn-xs am-radius am-icon-bell-o" data-am-dropdown-toggle> 消息管理<span class="am-badge am-badge-danger am-round">6</span></button>
+                <button class="am-btn am-btn-primary am-dropdown-toggle am-btn-xs am-radius am-icon-bell-o"
+                        data-am-dropdown-toggle> 消息管理<span class="am-badge am-badge-danger am-round">6</span></button>
                 <ul class="am-dropdown-content">
                     <li class="am-dropdown-header">所有消息都在这里</li>
                     <li><a href="#">未激活会员 <span class="am-badge am-badge-danger am-round">556</span></a></li>
@@ -64,23 +66,32 @@
                         <option value="o">会员</option>
                     </select>
                 </p>
-                <p class="ycfg"><input type="text" class="am-form-field am-input-sm" placeholder="圆角表单域" /></p>
-                <p><button class="am-btn am-btn-xs am-btn-default am-xiao"><i class="am-icon-search"></i></button></p>
+                <p class="ycfg"><input type="text" class="am-form-field am-input-sm" placeholder="圆角表单域"/></p>
+                <p>
+                    <button class="am-btn am-btn-xs am-btn-default am-xiao"><i class="am-icon-search"></i></button>
+                </p>
             </li>
-            <li class="am-hide-sm-only" style="float: right;"><a href="javascript:;" id="admin-fullscreen"><span class="am-icon-arrows-alt"></span> <span class="admin-fullText">开启全屏</span></a></li>
+            <li class="am-hide-sm-only" style="float: right;"><a href="javascript:;" id="admin-fullscreen"><span
+                    class="am-icon-arrows-alt"></span> <span class="admin-fullText">开启全屏</span></a></li>
         </ul>
     </div>
 </header>
 <div class="am-cf admin-main">
     <div class="nav-navicon admin-main admin-sidebar">
-        <div class="sideMenu am-icon-dashboard" style="color:#aeb2b7; margin: 10px 0 0 0;"> 欢迎系统管理员：{$Think.session.login.nickname}</div>
+        <div class="sideMenu am-icon-dashboard" style="color:#aeb2b7; margin: 10px 0 0 0;">
+            欢迎系统管理员：{$Think.session.login.nickname}
+            <a href="{:url('Login/outLogin')}">退出</a>
+        </div>
         <div class="sideMenu">
             <h3 style="font-size: 15px" class="am-icon-flag"><em></em> <a href="#">井盖管理</a></h3>
             <ul>
                 <li><a href="{:url('commodity/lists')}">井盖列表</a></li>
-                <li class="func" dataType='html' dataLink='msn.htm' iconImg='images/msn.gif'><a href="{:url('commodity/type')}">添加井盖类型</a></li>
-                <li class="func" dataType='html' dataLink='msn.htm' iconImg='images/msn.gif'><a href="{:url('commodity/commodity')}">添加井盖信息</a></li>
-                <li class="func" dataType='html' dataLink='msn.htm' iconImg='images/msn.gif'><a href="{:url('index/index')}">返回首页</a></li>
+                <li class="func" dataType='html' dataLink='msn.htm' iconImg='images/msn.gif'><a
+                        href="{:url('commodity/type')}">添加井盖类型</a></li>
+                <li class="func" dataType='html' dataLink='msn.htm' iconImg='images/msn.gif'><a
+                        href="{:url('commodity/commodity')}">添加井盖信息</a></li>
+                <li class="func" dataType='html' dataLink='msn.htm' iconImg='images/msn.gif'><a
+                        href="{:url('index/index')}">返回首页</a></li>
             </ul>
             <!--<h3 style="font-size: 15px" class="am-icon-cart-plus"><em></em> <a href="#"> 订单管理</a></h3>-->
             <!--<ul>-->
@@ -124,13 +135,13 @@
         <!-- sideMenu End -->
         <script type="text/javascript">
             jQuery(".sideMenu").slide({
-                titCell:"h3", //鼠标触发对象
-                targetCell:"ul", //与titCell一一对应，第n个titCell控制第n个targetCell的显示隐藏
-                effect:"slideDown", //targetCell下拉效果
-                delayTime:300 , //效果时间
-                triggerTime:150, //鼠标延迟触发时间（默认150）
-                defaultPlay:true,//默认是否执行效果（默认true）
-                returnDefault:true //鼠标从.sideMen移走后返回默认状态（默认false）
+                titCell: "h3", //鼠标触发对象
+                targetCell: "ul", //与titCell一一对应，第n个titCell控制第n个targetCell的显示隐藏
+                effect: "slideDown", //targetCell下拉效果
+                delayTime: 300, //效果时间
+                triggerTime: 150, //鼠标延迟触发时间（默认150）
+                defaultPlay: true,//默认是否执行效果（默认true）
+                returnDefault: true //鼠标从.sideMen移走后返回默认状态（默认false）
             });
         </script>
     </div>
@@ -141,9 +152,11 @@
     </div>
 </div>
 <script type="text/javascript">jQuery(".slideTxtBox").slide();</script>
-<div style="text-align: center;width: 100%;height:60px;line-height:60px;font-size:17px;margin-top: 30px;background: cadetblue;color: ghostwhite";>井 盖 信 息</div>
+<div style="text-align: center;width: 100%;height:60px;line-height:60px;font-size:17px;margin-top: 30px;background: cadetblue;color: ghostwhite"
+     ;>井 盖 信 息
+</div>
 
-<div  style="width: 70%;margin-left: 290px;margin-top: 25px;">
+<div style="width: 70%;margin-left: 290px;margin-top: 25px;">
     <table class="layui-table">
         <colgroup>
             <col width="150">
@@ -164,8 +177,11 @@
             <td>{$key.name}</td>
             <td>{$key.well_name}</td>
             <td>
-                <div class="layui-btn layui-btn-xs" lay-event="edit"><a style="color: white" href="{:url('Commodity/sewer',['id'=>$key.id])}">编辑</a></div>
-                <div class="layui-btn layui-btn-danger layui-btn-xs delete" lay-event="del" data-value="{$key.id}">删除</div>
+                <div class="layui-btn layui-btn-xs" lay-event="edit"><a style="color: white"
+                                                                        href="{:url('Commodity/sewer',['id'=>$key.id])}">编辑</a>
+                </div>
+                <div class="layui-btn layui-btn-danger layui-btn-xs delete" lay-event="del" data-value="{$key.id}">删除
+                </div>
             </td>
         </tr>
         </tbody>
@@ -189,40 +205,40 @@
 <!--<![endif]-->
 
 <script>
-    layui.use('upload', function(){
+    layui.use('upload', function () {
         var upload = layui.upload;
 
         //执行实例
         var uploadInst = upload.render({
             elem: '#test11' //绑定元素
-            ,url: '/upload/' //上传接口
-            ,done: function(res){
+            , url: '/upload/' //上传接口
+            , done: function (res) {
                 //上传完毕回调
             }
-            ,error: function(){
+            , error: function () {
                 //请求异常回调
             }
         });
     });
 </script>
 <script>
-    $('.delete').click(function(){
+    $('.delete').click(function () {
         var id = $(this).attr('data-value');
-        layer.confirm('删除后数据不可恢复!',function(){
+        layer.confirm('删除后数据不可恢复!', function () {
             layer.closeAll();
             $.ajax({
-                data:{
-                    id:id
+                data: {
+                    id: id
                 },
-                type:'post',
-                url:'{:url("admin/Commodity/off")}',
-                success:function(s){
-                    if(s == 1){
+                type: 'post',
+                url: '{:url("admin/Commodity/off")}',
+                success: function (s) {
+                    if (s == 1) {
                         location.reload(true);
                     }
                 },
             })
-        },function(){
+        }, function () {
             //$this.prop('checked',!$this.prop('checked'));
             //var text = $switch.find('em').text() =='NO' ? 'No':'Y';
             //$switch.toggleClass('layui-form-onswitch').find('em').text(text);
