--- a/application/admin/view/Commodity/typee.html
+++ b/application/admin/view/Commodity/typee.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>后台管理</title>
+    <title>科翔后台管理系统</title>
     <meta name="description" content="这是一个 index 页面">
     <meta name="keywords" content="index">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
@@ -71,6 +71,7 @@
     <div class="nav-navicon admin-main admin-sidebar">
         <div class="sideMenu am-icon-dashboard" style="color:#aeb2b7; margin: 10px 0 0 0;">
             欢迎系统管理员：{$Think.session.login.nickname}
+            <a href="{:url('Login/outLogin')}">退出</a>
         </div>
         <div class="sideMenu">
             <h3 class="am-icon-flag"><em></em> <a href="#">井盖管理</a></h3>
@@ -85,41 +86,41 @@
             </ul>
             <!--<h3 class="am-icon-cart-plus"><em></em> <a href="#"> 订单管理</a></h3>-->
             <!--<ul>-->
-                <!--<li>订单列表</li>-->
-                <!--<li>合并订单</li>-->
-                <!--<li>订单打印</li>-->
-                <!--<li>添加订单</li>-->
-                <!--<li>发货单列表</li>-->
-                <!--<li>换货单列表</li>-->
+            <!--<li>订单列表</li>-->
+            <!--<li>合并订单</li>-->
+            <!--<li>订单打印</li>-->
+            <!--<li>添加订单</li>-->
+            <!--<li>发货单列表</li>-->
+            <!--<li>换货单列表</li>-->
             <!--</ul>-->
             <!--<h3 class="am-icon-users"><em></em> <a href="#">会员管理</a></h3>-->
             <!--<ul>-->
-                <!--<li>会员列表</li>-->
-                <!--<li>未激活会员</li>-->
-                <!--<li>团队系谱图</li>-->
-                <!--<li>会员推荐图</li>-->
-                <!--<li>推荐列表</li>-->
+            <!--<li>会员列表</li>-->
+            <!--<li>未激活会员</li>-->
+            <!--<li>团队系谱图</li>-->
+            <!--<li>会员推荐图</li>-->
+            <!--<li>推荐列表</li>-->
             <!--</ul>-->
             <!--<h3 class="am-icon-volume-up"><em></em> <a href="#">信息通知</a></h3>-->
             <!--<ul>-->
-                <!--<li>站内消息 /留言</li>-->
-                <!--<li>短信</li>-->
-                <!--<li>邮件</li>-->
-                <!--<li>微信</li>-->
-                <!--<li>客服</li>-->
+            <!--<li>站内消息 /留言</li>-->
+            <!--<li>短信</li>-->
+            <!--<li>邮件</li>-->
+            <!--<li>微信</li>-->
+            <!--<li>客服</li>-->
             <!--</ul>-->
             <!--<h3 class="am-icon-gears"><em></em> <a href="#">系统设置</a></h3>-->
             <!--<ul>-->
-                <!--<li>数据备份</li>-->
-                <!--<li>邮件/短信管理</li>-->
-                <!--<li>上传/下载</li>-->
-                <!--<li>权限</li>-->
-                <!--<li>网站设置</li>-->
-                <!--<li>第三方支付</li>-->
-                <!--<li>提现 /转账 出入账汇率</li>-->
-                <!--<li>平台设置</li>-->
-                <!--<li>声音文件</li>-->
-                <!--<li><a href="{:url('Login/outLogin')}">退出</a></li>-->
+            <!--<li>数据备份</li>-->
+            <!--<li>邮件/短信管理</li>-->
+            <!--<li>上传/下载</li>-->
+            <!--<li>权限</li>-->
+            <!--<li>网站设置</li>-->
+            <!--<li>第三方支付</li>-->
+            <!--<li>提现 /转账 出入账汇率</li>-->
+            <!--<li>平台设置</li>-->
+            <!--<li>声音文件</li>-->
+            <!--<li><a href="{:url('Login/outLogin')}">退出</a></li>-->
             <!--</ul>-->
         </div>
         <!-- sideMenu End -->
