--- a/application/admin/view/Distance/street.html
+++ b/application/admin/view/Distance/street.html
@@ -15,6 +15,15 @@
     <link rel="stylesheet" href="{$root}assets/css/amazeui.min.css"/>
     <link rel="stylesheet" href="{$root}assets/css/admin.css">
     <link rel="stylesheet" href="{$root}layui/css/layui.css">
+
+    <link rel="stylesheet" href="{$root}bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="{$root}bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{$root}bootstrap/css/bootstrap-theme.css">
+    <link rel="stylesheet" href="{$root}bootstrap/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="{$root}bootstrap/js/bootstrap.js">
+    <link rel="stylesheet" href="{$root}bootstrap/js/bootstrap.min.js">
+    <link rel="stylesheet" href="{$root}bootstrap/js/npm.js">
+
     <script src="{$root}layui/layui.js" charset="utf-8"></script>
     <script src="{$root}assets/js/jquery.min.js"></script>
     <script src="{$root}assets/js/app.js"></script>
@@ -74,7 +83,7 @@
             <a href="{:url('Login/outLogin')}">退出</a>
         </div>
         <div class="sideMenu">
-            <h3 class="am-icon-flag"><em></em> <a href="#">井盖管理</a></h3>
+            <h3 style="font-size: 15px" class="am-icon-flag"><em></em> <a href="#">井盖管理</a></h3>
             <ul>
                 <li><a href="{:url('commodity/lists')}">井盖列表</a></li>
                 <li class="func" dataType='html' dataLink='msn.htm' iconImg='images/msn.gif'><a
@@ -84,7 +93,7 @@
                 <li class="func" dataType='html' dataLink='msn.htm' iconImg='images/msn.gif'><a
                         href="{:url('index/index')}">返回首页</a></li>
             </ul>
-            <!--<h3 class="am-icon-cart-plus"><em></em> <a href="#"> 订单管理</a></h3>-->
+            <!--<h3 style="font-size: 15px" class="am-icon-cart-plus"><em></em> <a href="#"> 订单管理</a></h3>-->
             <!--<ul>-->
             <!--<li>订单列表</li>-->
             <!--<li>合并订单</li>-->
@@ -93,23 +102,23 @@
             <!--<li>发货单列表</li>-->
             <!--<li>换货单列表</li>-->
             <!--</ul>-->
-            <!--<h3 class="am-icon-users"><em></em> <a href="#">会员管理</a></h3>-->
+            <!--<h3 style="font-size: 15px" class="am-icon-users"><em></em> <a href="#">会员管理</a></h3>-->
             <!--<ul>-->
-            <!--<li>会员列表</li>-->
+            <!--<li>会员列表 </li>-->
             <!--<li>未激活会员</li>-->
             <!--<li>团队系谱图</li>-->
             <!--<li>会员推荐图</li>-->
             <!--<li>推荐列表</li>-->
             <!--</ul>-->
-            <!--<h3 class="am-icon-volume-up"><em></em> <a href="#">信息通知</a></h3>-->
+            <!--<h3 style="font-size: 15px" class="am-icon-volume-up"><em></em> <a href="#">信息通知</a></h3>-->
             <!--<ul>-->
-            <!--<li>站内消息 /留言</li>-->
+            <!--<li>站内消息 /留言 </li>-->
             <!--<li>短信</li>-->
             <!--<li>邮件</li>-->
             <!--<li>微信</li>-->
             <!--<li>客服</li>-->
             <!--</ul>-->
-            <!--<h3 class="am-icon-gears"><em></em> <a href="#">系统设置</a></h3>-->
+            <!--<h3 style="font-size: 15px" class="am-icon-gears"><em></em> <a href="#">系统设置</a></h3>-->
             <!--<ul>-->
             <!--<li>数据备份</li>-->
             <!--<li>邮件/短信管理</li>-->
@@ -144,38 +153,43 @@
 </div>
 <script type="text/javascript">jQuery(".slideTxtBox").slide();</script>
 <div style="text-align: center;width: 100%;height:60px;line-height:60px;font-size:17px;margin-top: 30px;background: cadetblue;color: ghostwhite"
-     ;>修 改 类 型
+     ;>街 道 信 息
 </div>
 
-<div style="width:30%;margin-left: 290px;margin-top: 25px;">
-    <form class="layui-form" action="" method="post" enctype="multipart/form-data"><!--搜索提交-->
-        <div class="layui-form-item">
-            <label class="layui-form-label">类型名</label>
-            <div class="layui-input-block">
-                <input type="text" name="name" autocomplete="off" class="layui-input" value="{$data.name}">
-                {if isset($cw.name)}
-                <div style="text-align: center;color: red;;margin-top: 15px;">{$cw.name}</div>
-                {/if}
-            </div>
-        </div>
-        <div class="layui-form-item">
-            <label class="layui-form-label">类型值</label>
-            <div class="layui-input-block">
-                <input type="text" name="well_type_id" autocomplete="off" class="layui-input"
-                       value="{$data.well_type_id}">
-                {if isset($cw.well_type_id)}
-                <div style="text-align: center;color: red;;margin-top: 15px;">{$cw.well_type_id}</div>
-                {/if}
-            </div>
-        </div>
-        <button style="width: 100px;height: 40px;margin-top: 15px;margin-left: 110px" class="layui-btn" lay-submit=""
-                lay-filter="demo1">立即提交
-        </button>
-    </form>
+<div style="width: 70%;margin-left: 290px;margin-top: 25px;">
+    <table class="layui-table">
+        <colgroup>
+            <col width="150">
+            <col width="200">
+            <col width="200">
+            <col width="200">
+        </colgroup>
+        <thead>
+        <tr>
+            <th>街道名称</th>
+            <th>所属井盖</th>
+            <th>井盖类型</th>
+        </tr>
+        </thead>
+        {foreach $data as $value}
+        <tbody>
+        <tr>
+            <td>{$value.street_name}</td>
+            <td>{$value.name}</td>
+            <td>{$value.well_name}</td>
+            <!--<td>-->
+            <!--<div class="layui-btn layui-btn-xs" lay-event="edit"><a style="color: white" href="{:url('Commodity/street')}">编辑</a></div>-->
+            <!--<div class="layui-btn layui-btn-danger layui-btn-xs delete" lay-event="del" data-value="">删除</div>-->
+            <!--</td>-->
+        </tr>
+        </tbody>
+        {/foreach}
+    </table>
 </div>
-<script>
+<div>
+</div>
 
-</script>
+
 <!--[if lt IE 9]>
 <script src="http://libs.baidu.com/jquery/1.11.1/jquery.min.js"></script>
 <script src="http://cdn.staticfile.org/modernizr/2.8.3/modernizr.js"></script>
@@ -187,7 +201,5 @@
 <!--[if (gte IE 9)|!(IE)]><!-->
 <script src="{$root}assets/js/amazeui.min.js"></script>
 <!--<![endif]-->
-
-
 </body>
 </html>
