--- a/application/admin/view/Commodity/commodity.html
+++ b/application/admin/view/Commodity/commodity.html
@@ -189,6 +189,18 @@
                 <input type="text" name="length" autocomplete="off" class="layui-input">
             </div>
         </div>
+        <div class="layui-form-item">
+            <label class="layui-form-label">X坐标</label>
+            <div class="layui-input-block">
+                <input type="text" name="x" autocomplete="off" class="layui-input">
+            </div>
+        </div>
+        <div class="layui-form-item">
+            <label class="layui-form-label">Y坐标</label>
+            <div class="layui-input-block">
+                <input type="text" name="y" autocomplete="off" class="layui-input">
+            </div>
+        </div>
         <div style="width: 100px;height: 40px;overflow: hidden;position: relative;background: #009688;border-radius: 5px;margin-left: 110px;margin-top: 15px;">
             <div style="position: absolute;top: 10px;left: 15px;color: white"><i class="layui-icon">&#xe67c;</i>上传图片
             </div>
