--- a/application/admin/view/Commodity/sewer.html
+++ b/application/admin/view/Commodity/sewer.html
@@ -168,6 +168,26 @@
                 {/if}
             </div>
         </div>
+        <div class="layui-form-item">
+            <label class="layui-form-label">X坐标</label>
+            <div class="layui-input-block">
+                <input type="text" name="x" autocomplete="off" class="layui-input"
+                       value="{$data.x}">
+                {if isset($cw.x)}
+                <div style="text-align: center;color: red;;margin-top: 15px;">{$cw.x}</div>
+                {/if}
+            </div>
+        </div>
+        <div class="layui-form-item">
+            <label class="layui-form-label">Y坐标</label>
+            <div class="layui-input-block">
+                <input type="text" name="y" autocomplete="off" class="layui-input"
+                       value="{$data.y}">
+                {if isset($cw.y)}
+                <div style="text-align: center;color: red;;margin-top: 15px;">{$cw.y}</div>
+                {/if}
+            </div>
+        </div>
         <button style="width: 100px;height: 40px;margin-top: 15px;margin-left: 110px" class="layui-btn" lay-submit=""
                 lay-filter="demo1">立即提交
         </button>
