--- a/application/admin/view/Index/index.html
+++ b/application/admin/view/Index/index.html
@@ -16,6 +16,8 @@
     <link rel="stylesheet" href="{$root}assets/css/admin.css">
     <script src="{$root}assets/js/jquery.min.js"></script>
     <script src="{$root}assets/js/app.js"></script>
+    <script src="../../../../../kexiang/src/vuex/store.js"></script>
+    <script src="../../../../../kexiang/src/vuex/getters.js"></script>
 </head>
 <!--[if lte IE 9]><p class="browsehappy">升级你的浏览器吧！ <a href="http://se.360.cn/" target="_blank">升级浏览器</a>以获得更好的体验！</p>
 <![endif]-->
