--- a/application/admin/view/map/map.html
+++ b/application/admin/view/map/map.html
@@ -20,14 +20,23 @@
     </style>
     <script type="text/javascript"
             src="http://api.map.baidu.com/api?v=2.0&ak=jv44fGVSEclhv0n9gNt9NngGLPXjoUpS"></script>
+    <!--加载鼠标绘制工具-->
+    <script type="text/javascript"
+            src="http://api.map.baidu.com/library/DrawingManager/1.4/src/DrawingManager_min.js"></script>
+    <link rel="stylesheet" href="http://api.map.baidu.com/library/DrawingManager/1.4/src/DrawingManager_min.css"/>
+    <!--加载检索信息窗口-->
+    <script type="text/javascript"
+            src="http://api.map.baidu.com/library/SearchInfoWindow/1.4/src/SearchInfoWindow_min.js"></script>
+    <link rel="stylesheet" href="http://api.map.baidu.com/library/SearchInfoWindow/1.4/src/SearchInfoWindow_min.css"/>
+
     <title>地图展示</title>
 </head>
 <body>
 <div id="container"></div>
-<!--<div id="r-result">-->
-<!--<input type="button" onclick="add_overlay();" value="添加覆盖物"/>-->
-<!--<input type="button" onclick="remove_overlay();" value="删除覆盖物"/>-->
-<!--</div>-->
+<div id="result" style="position: absolute;bottom:0;left:0;">
+    <input type="button" value="获取绘制的覆盖物个数" onclick="alert(overlays.length)"/>
+    <input type="button" value="清除所有覆盖物" onclick="clearAll()"/>
+</div>
 </body>
 </html>
 <script type="text/javascript">
@@ -40,6 +49,56 @@
     map.addControl(new BMap.OverviewMapControl());
     map.addControl(new BMap.MapTypeControl());
     // map.setMapType(BMAP_PERSPECTIVE_MAP);
+    map.enableScrollWheelZoom();
+    var overlays = [];
+    var overlaycomplete = function (e) {
+        overlays.push(e.overlay);
+    };
+    var styleOptions = {
+        //>>边线颜色
+        strokeColor: "white",
+        //>>填充颜色。当参数为空时，圆形将没有填充效果。
+        fillColor: "green",
+        //>>边线的宽度，以像素为单位。
+        strokeWeight: 3,
+        //>>边线透明度，取值范围0 - 1。
+        strokeOpacity: 0.8,
+        //>>填充的透明度，取值范围0 - 1。
+        fillOpacity: 0.4,
+        //边线的样式，solid或dashed。
+        strokeStyle: 'dashed'
+    }
+    //实例化鼠标绘制工具
+    var drawingManager = new BMapLib.DrawingManager(map, {
+        //>>是否开启绘制模式
+        isOpen: false,
+        //>>是否显示工具栏
+        enableDrawingTool: true,
+        drawingToolOptions: {
+            //>>位置
+            anchor: BMAP_ANCHOR_TOP_RIGHT,
+            //>>偏离值
+            offset: new BMap.Size(5, 5),
+        },
+        //>>圆的样式
+        circleOptions: styleOptions,
+        //>>线的样式
+        polylineOptions: styleOptions,
+        //>>多边形的样式
+        polygonOptions: styleOptions,
+        //矩形的样式
+        rectangleOptions: styleOptions
+    });
+    //添加鼠标绘制工具监听事件，用于获取绘制结果
+    drawingManager.addEventListener('overlaycomplete', overlaycomplete);
+
+    function clearAll() {
+        for (var i = 0; i < overlays.length; i++) {
+            map.removeOverlay(overlays[i]);
+        }
+        overlays.length = 0
+    }
+
     //>>开启鼠标轮播缩放
     map.setCurrentCity("#");
     map.enableScrollWheelZoom(true);
